--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "dotenv": "^17.2.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.14.4",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pug": "^3.0.3"
   }
 }
