--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "mysql2": "^3.14.4",
     "nodemon": "^3.1.10",
     "pug": "^3.0.3"
+  },
+  "devDependencies": {
+    "cypress": "^15.2.0",
+    "start-server-and-test": "^2.1.2"
   }
 }
